--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,3 @@
 # This file lists all individuals having contributed content to the repository.
-Victor Koech   mailto: <>
+Victor Koech   mailto: <kipkiruiv408@gmail.com>
 Innocent Maina mailto: <innocentwahome@gmail.com>
